# biasops-policy-marketplace

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
biasops/: __init__.py  api.py  cli.py  engine.py  loader.py  models.py  registry.py  validator.py
docs/: api_reference.md  architecture.md  policy_authoring.md
examples/: custom_policy.yaml  quickstart.py
examples/eu_ai_act_demo/: README.md  compliant_model.json  non_compliant_model.json  partial_compliant_model.json  run_scan.py
policies/builtin/: fairness_basic.yaml
policies/enterprise-compliance/eu-ai-act/: eu_ai_act_high_risk_system.yaml  eu_ai_act_prohibited_practices.yaml
policies/enterprise-compliance/gdpr/: gdpr_article22_automated_decision.yaml
policies/financial-services/: cfpb_adverse_action.yaml  ecoa_disparate_impact.yaml  fair_housing_act_credit.yaml  hmda_reporting_compliance.yaml  sr11_7_model_risk.yaml
policies/hr-employment/hiring-bias/: eeoc_title7_hiring_disparate_impact.yaml
schemas/: evaluation_schema.json  policy_schema.json  rule_schema.json
templates/: policy_template.yaml  rule_template.yaml
tests/: test_api.py  test_cli.py  test_engine.py  test_loader.py  test_models.py  test_policies.py  test_validator.py
